--- a/packages/custom/events/package.json
+++ b/packages/custom/events/package.json
@@ -10,6 +10,8 @@
     "node": "0.10.x",
     "npm": "1.4.x"
   },
-  "dependencies": {},
+  "dependencies": {
+      "paypal-rest-sdk" : "1.1.0"
+  },
   "license": "MIT"
 }
