--- a/.jshintrc
+++ b/.jshintrc
@@ -14,8 +14,8 @@
     "noarg"         : true,     // true: Prohibit use of `arguments.caller` and `arguments.callee`
     "noempty"       : true,     // true: Prohibit use of empty blocks
     "nonew"         : true,     // true: Prohibit use of constructors for side-effects (without assignment)
-    "plusplus"      : true,     // true: Prohibit use of `++` & `--`
-    "quotmark"      : "single", // Quotation mark consistency:
+    "plusplus"      : false,     // true: Prohibit use of `++` & `--`
+    "quotmark"      : false, // Quotation mark consistency:
                                 //   false    : do nothing (default)
                                 //   true     : ensure whatever is used is consistent
                                 //   "single" : require single quotes
