--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "angular-ui-router": "#master",
     "angu-fixed-header-table" : "latest",
     "angular-spinner" : "latest"
+  },
+  "resolutions":{
+    "angular": "1.3.5"
   }
 }
